force-app/main/default/objects/Judgement__c/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <inlineHelpText>For populating 30-, 60-, and 90-Day Notices if needed.</inlineHelpText>
    <label>Attention To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>