force-app/main/default/objects/Judgement__c/fields/Attorney_Fees_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fees_Balance_Due__c</fullName>
    <formula>Attorney_Fees__c - Attorney_Fee_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Fees Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>