force-app/main/default/objects/Judgement__c/fields/Citation_Number__c.field-meta.xml
<CustomField>
    <fullName>Citation_Number__c</fullName>
    <formula>Liability__r.Citation_Number__c</formula>
    <inlineHelpText>Citation Number from the parent Liability.</inlineHelpText>
    <label>Citation Number</label>
    <type>Text</type>
</CustomField>