force-app/main/default/objects/Judgement__c/fields/County_Lien_Recorded_in__c.field-meta.xml
<CustomField>
    <fullName>County_Lien_Recorded_in__c</fullName>
    <label>County Lien Recorded in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>