force-app/main/default/objects/Judgement__c/fields/County_Recorder__c.field-meta.xml
<CustomField>
    <fullName>County_Recorder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To get office name and address of County Lien Recorded in</description>
    <label>County Recorder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>County_Registrar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Judgments (County Registrar)</relationshipLabel>
    <relationshipName>County_Recorder</relationshipName>
    <type>Lookup</type>
</CustomField>