force-app/main/default/objects/Judgement__c/fields/Court_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number__c</fullName>
    <inlineHelpText>Add the court case number when the judgment is returned from the court.</inlineHelpText>
    <label>Court Case Number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>