force-app/main/default/objects/Judgement__c/fields/Date_of_WJC_Disp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_WJC_Disp__c</fullName>
    <label>Date of WJC Disp</label>
    <type>Date</type>
</CustomField>