force-app/main/default/objects/Judgement__c/fields/E_filing_Fee__c.field-meta.xml
<CustomField>
    <fullName>E_filing_Fee__c</fullName>
    <label>E-filing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>