force-app/main/default/objects/Judgement__c/fields/Expires_Date__c.field-meta.xml
<CustomField>
    <fullName>Expires_Date__c</fullName>
    <formula>DATE( 
YEAR(Judgement_Date__c ) + 10, 
MONTH(Judgement_Date__c ), 
DAY(Judgement_Date__c )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires Date</label>
    <type>Date</type>
</CustomField>