force-app/main/default/objects/Judgement__c/fields/Filing_Fee_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fee_Payments_Received__c</fullName>
    <description>Rollup Summary of judgment payments received and captured on apply payment page. Rolls up all Judgment Payments applied to Filing Fees.</description>
    <inlineHelpText>Total of all payments received against Filing Fees that are a part of this judgment</inlineHelpText>
    <label>Filing Fee Payments Received</label>
    <summarizedField>Judgment_Payment__c.Posted_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Judgment_Payment__c.Payment_Applied_To__c</field>
        <operation>equals</operation>
        <value>Filing Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Judgment_Payment__c.Judgment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>