force-app/main/default/objects/Judgement__c/fields/Filing_Fees_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fees_Balance_Due__c</fullName>
    <formula>Filing_Fee__c - Filing_Fee_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filing Fees Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>