force-app/main/default/objects/Judgement__c/fields/Interest_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Date__c</fullName>
    <description>Allows the user to calculate the post judgment interest that will be due on a certain date. Uses the interest custom setting to determine the rate.</description>
    <inlineHelpText>Enter a date here to calculate the interest that will be due if paid on that date.</inlineHelpText>
    <label>Interest Calculation Date</label>
    <type>Date</type>
</CustomField>