force-app/main/default/objects/Judgement__c/fields/Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Due__c</fullName>
    <inlineHelpText>Interest due between the date the defendant was required to pay and the date the judgment was sent to the court.</inlineHelpText>
    <label>Post-Hearing Interest</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>