force-app/main/default/objects/Judgement__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest rate of the post judgment interest. Populated when the decision date is entered.</description>
    <inlineHelpText>Interest rate being charged on this judgment</inlineHelpText>
    <label>Interest Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>