force-app/main/default/objects/Judgement__c/fields/Judgement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Amount__c</fullName>
    <label>Judgment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>