force-app/main/default/objects/Judgement__c/fields/Judgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Date__c</fullName>
    <inlineHelpText>Date the clerk entered the judgement</inlineHelpText>
    <label>Judgment Entry Date</label>
    <type>Date</type>
</CustomField>