force-app/main/default/objects/Judgement__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <label>Judgment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>