force-app/main/default/objects/Judgement__c/fields/Judgment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Balance__c</fullName>
    <formula>Judgement_Amount__c - Judgment_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Judgment amount minus any payments received against the violations on the judgment.</inlineHelpText>
    <label>Judgment Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>