force-app/main/default/objects/Judgement__c/fields/Judgment_Discharged_in_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Discharged_in_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WCA/BOFE/JEU</description>
    <label>Judgment Discharged in Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>