force-app/main/default/objects/Judgement__c/fields/Judgment_Mailing_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Mailing_Date__c</fullName>
    <description>The date the deputy sent the judgment to the court to be entered. Used in the calculation of pre-judgment interest</description>
    <inlineHelpText>Date the judgement was sent to the court to be entered</inlineHelpText>
    <label>Judgment Mailing Date</label>
    <type>Date</type>
</CustomField>