force-app/main/default/objects/Judgement__c/fields/Judgment_Total__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Total__c</fullName>
    <description>Used for showing judgment total on public search</description>
    <formula>(Judgement_Amount__c  +  Interest_Due__c  +  Filing_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>