force-app/main/default/objects/Judgement__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Liability__c.Case_Management__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Management__c</valueField>
        </filterItems>
        <filterItems>
            <field>Liability__c.Refer_to_JEU__c</field>
            <operation>equals</operation>
            <value>Accepted, Pending-JEU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Liability__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>