force-app/main/default/objects/Judgement__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Meeting records associated with the Case MGMT record related to the Judgment record.  Filtered by the matching the name of the Case on the Meeting to the name of the Case on the Judgment.</description>
    <label>Meeting</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hearing__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Management__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>