force-app/main/default/objects/Judgement__c/fields/Meeting_Held_By__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_By__c</fullName>
    <description>Formula to migrate the internal employee in the "Meeting Held By" field on the Meeting record to the Judgment for output.</description>
    <formula>Meeting__r.Hearing_Officer_Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Held By</label>
    <type>Text</type>
</CustomField>