force-app/main/default/objects/Judgement__c/fields/Run_Me_Complete__c.field-meta.xml
<CustomField>
    <fullName>Run_Me_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a flag for process builder criteria that run on all updates to a record. Prevents multiple runs of the same actions when recursive</description>
    <label>Run Me Complete</label>
    <type>Checkbox</type>
</CustomField>