force-app/main/default/objects/Judgement__c/fields/Settlement_Amounts_Not_Accrue_Interest__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amounts_Not_Accrue_Interest__c</fullName>
    <formula>Settlement__r.Amounts_due_that_do_NOT_accrue_interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amounts That Do Not Accrue Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>