force-app/main/default/objects/Judgement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending/Open</fullName>
            </value>
            <value>
                <fullName>Open/Unpaid</fullName>
            </value>
            <value>
                <fullName>Open - Partial Payment/Satisfaction</fullName>
            </value>
            <value>
                <fullName>Open - Payment Plan</fullName>
            </value>
            <value>
                <fullName>Closed - Satisfied</fullName>
            </value>
            <value>
                <fullName>Closed - Discharged in Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Stayed - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Stayed - Other</fullName>
            </value>
            <value>
                <fullName>Vacated</fullName>
            </value>
            <value>
                <fullName>Closed-Claimant Judgment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>