force-app/main/default/objects/Judgement__c/fields/Stay_of_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Stay_of_Execution_Date__c</fullName>
    <description>Requested date field by Patti Huber made on 12/29/15 via bug B-07303.  To be used to populate the WCA 92 document with the Stay of Execution Date.</description>
    <label>Stay of Execution Date</label>
    <type>Date</type>
</CustomField>