force-app/main/default/objects/Judgement__c/fields/Total_Due_to_Other_s__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_to_Other_s__c</fullName>
    <label>Total Due to Other(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>