force-app/main/default/objects/Judgement__c/fields/Total_Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Balance_Due__c</fullName>
    <label>Total Wage Balance Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>