force-app/main/default/objects/Judgement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ODA by Settlement</fullName>
            </value>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>Tax Lien</fullName>
            </value>
            <value>
                <fullName>Court Judgment</fullName>
            </value>
            <value>
                <fullName>RCI Citation Pre-Hearing</fullName>
            </value>
            <value>
                <fullName>RCI Citation Post-Hearing</fullName>
            </value>
            <value>
                <fullName>Default Clerk Judgment</fullName>
            </value>
            <value>
                <fullName>Citation against subsequent offender  (LC 2810.4(b)(1)(B))</fullName>
            </value>
            <value>
                <fullName>ODA against subsequent offender (LC 2810.4(b)(1)(B))</fullName>
            </value>
            <value>
                <fullName>Other Ruling or award against subsequent offender (LC 2810.4(b)(1)(B))</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>