force-app/main/default/objects/Judgement__c/fields/X180DayReminderEmailSent__c.field-meta.xml
<CustomField>
    <fullName>X180DayReminderEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if reminder email sent</description>
    <label>180DayReminderEmailSent</label>
    <type>Checkbox</type>
</CustomField>