force-app/main/default/objects/Judgement__c/fields/X2810_4_Applies__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Applies__c</fullName>
    <formula>TEXT(Case_Management__r.X2810_4_Applies__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To edit this field, please go to the Case Management page.</inlineHelpText>
    <label>2810.4 Applies</label>
    <type>Text</type>
</CustomField>