force-app/main/default/objects/Judgement__c/fields/X2810_4_Determination__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Determination__c</fullName>
    <label>2810.4 Determination</label>
    <type>Date</type>
</CustomField>