force-app/main/default/objects/Judgement__c/fields/X60_Day_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Notice_Date__c</fullName>
    <inlineHelpText>Date the 60-Day Notice was sent.</inlineHelpText>
    <label>60-Day Notice Date</label>
    <type>Date</type>
</CustomField>