force-app/main/default/objects/Judgement__c/recordTypes/JEU.recordType-meta.xml
<RecordType>
    <fullName>JEU</fullName>
    <active>true</active>
    <description>Judgment Enforcement Unit</description>
    <label>JEU</label>
</RecordType>