force-app/main/default/objects/Judgement__c/recordTypes/LC_2810_4_Citation_Decision_or_Award_Subsequent_Offender.recordType-meta.xml
<RecordType>
    <fullName>LC_2810_4_Citation_Decision_or_Award_Subsequent_Offender</fullName>
    <active>true</active>
    <description>Dummy Judgment</description>
    <label>LC 2810.4 Citation Decision or Award Subsequent Offender</label>
</RecordType>