force-app/main/default/objects/Judgement__c/recordTypes/Non_DLSE_LC_2810_4.recordType-meta.xml
<RecordType>
    <fullName>Non_DLSE_LC_2810_4</fullName>
    <active>true</active>
    <description>For third-party judgment.</description>
    <label>Non-DLSE (LC 2810.4)</label>
</RecordType>