force-app/main/default/objects/Judgement__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>Wage Claim Adjudication and Garment Judgments</description>
    <label>WCA</label>
</RecordType>